--- a/CSS Files/about.css
+++ b/CSS Files/about.css
@@ -74,6 +74,18 @@ a{
     border:none;
     cursor:pointer;
 }
+.navigation_bar .menu-btn{
+    background-color: white;
+    border:none;
+    width:100%;
+    visibility: hidden;
+}
+.navigation_bar .menu-btn img{
+    width:50%;
+    /* border:2px solid red; */
+    height:2.5rem;
+    visibility: hidden;
+}
 .details{
     display: flex;
     flex-direction: column;
@@ -120,9 +132,7 @@ li{
 .founder_details img{
     width:60%;
     height:500px;
-    /* border:4px solid black; */
-    border-top-right-radius: 160px;
-    border-bottom-left-radius: 160px;
+    border-radius:10px;
 }
 .footer,.footer a{
     background-color: black;
@@ -158,4 +168,54 @@ span{
     font-size:2rem;
     font-size:bolder;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+@media (max-width:450px){
+    .navigation_bar .menu-btn , .navigation_bar .menu-btn img{
+        visibility: visible;
+    }
+    .navigation_bar .midsection , .navigation_bar .user{
+        display:none;
+    }
+    .details{
+        gap:3rem;
+    }
+    .details .details1 , .details2{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap:2rem;
+    }
+    .details1 h1 , .details2 h1 , .founder h1{
+        font-size:1.5rem;
+    }
+    .details1 p , .details2 li , .founder_details p{
+        font-size: 0.9rem;
+    }
+    .founder{
+        gap:5rem;
+    }
+    .founder_details{
+        display:flex;
+        flex-direction: column;
+        gap:4rem;
+    }
+    .founder_details img{
+        width:70%;
+        height:300px;
+    }
+    .founder_details p{
+        padding:0 3rem;
+    }
+    .footer{
+        flex-direction: column;
+        gap:8%;
+    }
+    .footer .sec1,.sec2,.sec3,.sec4{
+        width:100%;
+        margin-top:2rem;
+    }
+    .footer .sec4 img{
+        width:70%;
+    }
 }
